--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,45 +1,53 @@
 [server]
 host: 0.0.0.0
 port: 7125
-klippy_uds_address: /home/biqu/printer_data/comms/klippy.sock
+
+[file_manager]
+# cancel object preprocessing - set to True to enable; leave disabled when running on a low-powered device (e.g. Pi Zero)
+enable_object_processing: True
+
+[data_store]
+temperature_store_size: 600
+gcode_store_size: 1000
 
 [authorization]
-trusted_clients:
-    10.0.0.0/8
-    127.0.0.0/8
-    169.254.0.0/16
-    172.16.0.0/12
-    192.168.0.0/16
-    FE80::/10
-    ::1/128
-cors_domains:
-    *.lan
-    *.local
-    *://localhost
-    *://localhost:*
-    *://my.mainsail.xyz
-    *://app.fluidd.xyz
+force_logins: false
 
-[octoprint_compat]
+cors_domains:
+  *.local
+  *.lan
+  *://localhost
+  *://app.fluidd.xyz
+
+trusted_clients:
+  10.0.0.0/8
+  127.0.0.0/8
+  169.254.0.0/16
+  172.16.0.0/12
+  192.168.0.0/16
+  FE80::/10
+  ::1/128
 
 [history]
 
+[octoprint_compat]
+
+#####################################################################
+# Update Manager
+#####################################################################
+
+# this enables moonraker's update manager
 [update_manager]
-channel: dev
-refresh_interval: 168
+enable_auto_refresh: True
 
-[update_manager mainsail-config]
-type: git_repo
-primary_branch: master
-path: ~/mainsail-config
-origin: https://github.com/mainsail-crew/mainsail-config.git
-managed_services: klipper
+[announcements]
+subscriptions:
+  fluidd
 
-[update_manager mainsail]
+[update_manager fluidd]
 type: web
-channel: stable
-repo: mainsail-crew/mainsail
-path: ~/mainsail
+repo: fluidd-core/fluidd
+path: ~/fluidd
 
 [update_manager crowsnest]
 type: git_repo
@@ -47,7 +55,6 @@ path: ~/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
 install_script: tools/install.sh
 
-# Sonar update_manager entry
 [update_manager sonar]
 type: git_repo
 path: ~/sonar
