--- a/printer_AM8.cfg
+++ b/printer_AM8.cfg
@@ -1,3 +1,33 @@
+## Anet AM8 Config for Fly E3 Board
+
+#####################################################################
+#     Printer Definition
+#####################################################################
+
+[printer]
+kinematics: cartesian
+max_velocity: 350
+max_accel: 3000
+max_z_velocity: 5
+max_z_accel: 100
+square_corner_velocity: 6.0
+
+[include globals.cfg]
+
+#####################################################################
+#     MCUs
+#####################################################################
+
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_38002F000D47393438343535-if00
+
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
+#####################################################################
+#      X/Y Stepper Settings
+#####################################################################
+
 [stepper_x]
 step_pin: PE3
 dir_pin: PE2
@@ -38,6 +68,10 @@ driver_SGTHRS: 100
 run_current: 0.580
 stealthchop_threshold: 999999
 
+#####################################################################
+#   Z Stepper Settings
+#####################################################################
+
 [stepper_z]
 step_pin: PB3
 dir_pin: PD7
@@ -55,40 +89,9 @@ run_current: 0.580
 hold_current: 0.500
 stealthchop_threshold: 999999
 
-#[temperature_sensor spi_sensor]
-#sensor_type: MAX31855
-#sensor_pin: PC7
-#gcode_id: spi_sensor
-#spi_software_sclk_pin: PD14
-#spi_software_mosi_pin: PD12
-#spi_software_miso_pin: PD13
-
-[thermistor board_thermistor]
-temperature1: 25
-resistance1:  100000
-beta: 4092
-
-[temperature_sensor board_sensor]
-sensor_type: board_thermistor
-sensor_pin: PC1
-gcode_id: board_sensor
-
-[thermistor custom_thermistor]
-temperature1: 200
-resistance1:  305.266
-temperature2: 260
-resistance2:  99.177
-temperature3: 300
-resistance3:  52.222
-
-# Max Volumetric Flow: 
-# PLA 230°C = 19mm^3/s
-#   0.6 * 0.4 = 79mm/s
-#   0.6 * 0.2 = 158mm/s
-# PLA 250°C = 20mm^3/s
-# 
-# 2023
-# PLA @ 230° 0.7 * 0.35 = 27mm^3
+#####################################################################
+#   Extruder
+#####################################################################
 
 [extruder]
 #step_pin: PD4
@@ -102,7 +105,7 @@ rotation_distance: 23.1
 filament_diameter: 1.750
 nozzle_diameter: 0.6
 heater_pin: PA5
-sensor_type: ATC Semitec 104NT-4-R025H42G #custom_thermistor 
+sensor_type: ATC Semitec 104NT-4-R025H42G
 sensor_pin: PA4
 pullup_resistor: 6400
 #pullup_resistor: 0.1
@@ -117,7 +120,7 @@ pid_kd = 150.220
 min_extrude_temp: 185
 min_temp: 15
 max_temp: 300
-#max_extrude_cross_section: 50.0
+max_extrude_cross_section: 1000
 max_extrude_only_distance: 2000.0
 #max_extrude_only_velocity: 120.0
 #max_extrude_only_accel: 1250.0
@@ -132,6 +135,10 @@ shaper_freq_y = 47.2
 #uart_pin: PD5
 uart_pin: PC14
 run_current: 0.580
+
+#####################################################################
+#   Bed Heater
+#####################################################################
 
 [heater_bed]
 heater_pin: PA0 #PD11 #PB7 #PA0
@@ -149,7 +156,8 @@ pin: ^!PC4
 x_offset: 29
 y_offset: 3
 #z_offset = 1 # set this to your Live Z Offset, but negated (invert the sign)
-z_offset = 0.49
+z_offset = 0.49 # Yellow Tape
+#z_offset = 2.800 # PEI Sheet
 speed: 10.0
 sample_retract_dist: 1.0
 samples: 2
@@ -161,8 +169,8 @@ z_hop: 4
 [bed_mesh]
 speed: 300
 horizontal_move_z: 5
-mesh_min: 20, 20
-mesh_max: 200, 200
+mesh_min: 30, 30
+mesh_max: 190, 190
 probe_count: 4, 4
 
 [screws_tilt_adjust]
@@ -178,9 +186,31 @@ horizontal_move_z: 5.
 speed: 100.
 screw_thread: CW-M3 # Use CW for Clowise and CCW for Counter Clockwise 
 
-[filament_switch_sensor filament_sensor]
-switch_pin: ^PD0
-pause_on_runout: True
+#####################################################################
+#   Temperature Sensors
+#####################################################################
+
+#[temperature_sensor spi_sensor]
+#sensor_type: MAX31855
+#sensor_pin: PC7
+#gcode_id: spi_sensor
+#spi_software_sclk_pin: PD14
+#spi_software_mosi_pin: PD12
+#spi_software_miso_pin: PD13
+
+[temperature_sensor board_sensor]
+sensor_type: board_thermistor
+sensor_pin: PC1
+gcode_id: board_sensor
+
+[thermistor board_thermistor]
+temperature1: 25
+resistance1:  100000
+beta: 4092
+
+#####################################################################
+# Fan Control
+#####################################################################
 
 [heater_fan extruder_cooling_fan]
 pin: PA7
@@ -189,7 +219,6 @@ heater_temp: 50.0
 
 [fan]
 pin: PA6
-
 
 [temperature_sensor chamber]
 sensor_type: BME280
@@ -225,18 +254,6 @@ control: watermark
 pin: PC6
 value: 1
 
-[mcu]
-serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_38002F000D47393438343535-if00
-
-[printer]
-kinematics: cartesian
-max_velocity: 350
-max_accel: 3000
-max_z_velocity: 5
-max_z_accel: 100
-
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
 
 [adxl345 hotend]
 cs_pin: rpi:None
@@ -252,11 +269,19 @@ accel_chip_y: adxl345 bed
 probe_points:
     110, 110, 20  # an example
 
-# Warning: display section not tested!
+#####################################################################
+#   Filament Runout Sensor
+#####################################################################
+
+# [filament_switch_sensor filament_sensor]
+# switch_pin: ^PD0
+# pause_on_runout: True
 
 ######################################################################
 # "RepRapDiscount 128x64 Full Graphic Smart Controller" type display
 ######################################################################
+
+# Warning: display section not tested!
 
 [display]
 lcd_type: st7920
@@ -306,17 +331,15 @@ aliases:
 # See the sample-lcd.cfg file for definitions of common LCD displays.
 # fluidd parameters
 
-[virtual_sdcard]
-path: ~/gcode_files
+#####################################################################
+#   Macros
+#####################################################################
 
-[display_status]
+[include Macros/*.cfg]
 
-[pause_resume]
-
-[respond]
-
-# marcos
-[include ./macros.cfg]
+#####################################################################
+#   SAVE_CONFIG
+#####################################################################
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -324,10 +347,10 @@ path: ~/gcode_files
 #*# [bed_mesh automesh]
 #*# version = 1
 #*# points =
-#*# 	  -0.247500, -0.125000, -0.080000, -0.030000
-#*# 	  -0.262500, -0.112500, -0.067500, -0.025000
-#*# 	  -0.250000, -0.092500, -0.035000, 0.002500
-#*# 	  -0.265000, -0.105000, -0.062500, -0.025000
+#*# 	-0.247500, -0.125000, -0.080000, -0.030000
+#*# 	-0.262500, -0.112500, -0.067500, -0.025000
+#*# 	-0.250000, -0.092500, -0.035000, 0.002500
+#*# 	-0.265000, -0.105000, -0.062500, -0.025000
 #*# tension = 0.2
 #*# min_x = 20.0
 #*# algo = lagrange
