--- a/printer_VoronZero.cfg
+++ b/printer_VoronZero.cfg
@@ -1,30 +1,29 @@
-[include mainsail.cfg]
-# This file contains common pin mappings for the BIGTREETECH SKR Pico V1.0
-# To use this config, the firmware should be compiled for the RP2040 with
-# USB communication.
-
 # The "make flash" command does not work on the SKR Pico V1.0. Instead,
 # after running "make", copy the generated "out/klipper.uf2" file
 # to the mass storage device in RP2040 boot mode
 
 ## Voron Design VORON 0.2 SKR Pico V1.0 config
 
-## *** THINGS TO CHANGE/CHECK: ***
-## MCU path                                                                     [mcu] section
-## Z and Extruder motor currents                                                [tmc2209 stepper_*] sections. Uncomment the stepper motor you have
-## Full steps per rotation for Extruder                                         [extruder] section
-## Thermistor types                                                             [extruder] and [heater_bed] sections - See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types
-## Motor currents                                                               [extruder] [stepper] and [_HOME_X/Y] macro sections
-## PID tune                                                                     [extruder] and [heater_bed] sections
-## Fine tune E steps                                                            [extruder] section
-## For more info                                                                check https://docs.vorondesign.com/build/startup/#v0
+#####################################################################
+#     Printer Definition
+#####################################################################
+
+[printer]
+kinematics: corexy
+max_velocity: 600
+max_accel: 15000
+max_z_velocity: 15
+max_z_accel: 300
+square_corner_velocity: 6.0
+
+[include globals.cfg]
+
+#####################################################################
+#     MCUs
+#####################################################################
 
 [mcu]
-#####################################################################
-# Obtain definition by "ls -l /dev/serial/by-id/"
-#####################################################################
-serial: /dev/serial/by-id/usb-Klipper_rp2040_45503571288ABCA8-if00
-## serial: /dev/ttyAMA0 											# for UART connection
+serial: /dev/serial/by-id/usb-Klipper_rp2040_45503571288ABCA8-if00											# for UART connection
 restart_method: command
 
 [mcu U2C]
@@ -33,13 +32,12 @@ canbus_uuid: 326e494af6a4
 [mcu EBBCan]
 canbus_uuid: aca2a134879f
 
-[printer]
-kinematics: corexy
-max_velocity: 1350
-max_accel: 15000
-max_z_velocity: 15
-max_z_accel: 300
-square_corner_velocity: 6.0
+[mcu bttpi]
+serial: /tmp/klipper_host_mcu
+
+#[mcu pico]
+#serial: /dev/serial/by-id/usb-Klipper_rp2040_E661410403587130-if00
+#restart_method: command
 
 #####################################################################
 #      X/Y Stepper Settings
@@ -148,31 +146,25 @@ nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: EBBCan: PB13
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+#   One of "EPCOS 100K B57560G104F", "ATC Semitec 104GT-2",
+#   "ATC Semitec 104NT-4-R025H42G", "Generic 3950",
+#   "Honeywell 100K 135-104LAG-J01", "NTC 100K MGB18-104F39050L32",
+#   "SliceEngineering 450", or "TDK NTCG104LH104JT1"
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
 sensor_type: Generic 3950
 sensor_pin: EBBCan: PA3
-#control: pid                                                        # Do PID calibration after initial checks
-#pid_Kp: 28.182
-#pid_Ki: 1.978
-#pid_Kd: 100.397
+#pullup_resistor: 7100
 min_temp: 0
-max_temp: 270
-min_extrude_temp: 0
-max_extrude_only_distance: 150
-max_extrude_cross_section: 0.8
+max_temp: 290
+min_extrude_temp: 180
+max_extrude_only_distance: 1000 #150
+max_extrude_cross_section: 100 #0.8
 pressure_advance: 0.041                                              # See tuning pressure advance doc
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: EBBCan: PA15
 interpolate: False
-## For OMC (StepperOnline) 14HR07-1004VRN 1A 0.9°
-#run_current: 0.5 # for OMC 14HR07-1004VRN rated at 1A
-## For LDO LDO 36STH17-1004AHG 1A 1.8° 
-#run_current: 0.3 # for LDO 36STH17-1004AHG
-## For LDO LDO 36STH20-1004AHG 1A 1.8° 
-#run_current: 0.6 # for LDO 36STH20-1004AHG
-## For Moons CSE14RA1L410A-01
 run_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0                                            # Set to 0 for spreadcycle, avoid using stealthchop on extruder
@@ -191,10 +183,6 @@ smooth_time: 3.0
 #max_power: 0.6                                                     # Only needed for 100w pads
 min_temp: 0
 max_temp: 120
-#control: pid                                                        # Do PID calibration after initial checks
-#pid_kp: 68.453
-#pid_ki: 2.749
-#pid_kd: 426.122
 
 #####################################################################
 # Fan Control
@@ -216,7 +204,7 @@ off_below: 0.13
 cycle_time: 0.010
 
 [controller_fan MCU_fan]
-pin: gpio20
+pin: gpio17
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
@@ -226,10 +214,10 @@ heater: extruder
 #   Filament Runout Sensor
 #####################################################################
 
-[filament_switch_sensor Filament_Runout_Sensor]
-pause_on_runout: True
-runout_gcode: PAUSE
-switch_pin: gpio16
+#[filament_switch_sensor Filament_Runout_Sensor]
+#pause_on_runout: False
+#runout_gcode: PAUSE
+#switch_pin: gpio16
 
 #####################################################################
 # Homing and Gantry Adjustment Routines
@@ -273,16 +261,24 @@ screw3: 115,115
 screw3_name: back right
 
 #####################################################################
+#     LEDs
+#####################################################################
+
+[led chamber_led]
+white_pin: gpio20
+initial_WHITE: 1
+
+#####################################################################
 # Neopixel
 #####################################################################
 
-[neopixel board_rgb]
-pin: gpio24
-chain_count: 1
-color_order: GRB
-initial_RED: 0.0
-initial_GREEN: 0.1
-initial_BLUE: 0.0
+#[neopixel board_rgb]
+#pin: gpio24
+#chain_count: 1
+#color_order: GRB
+#initial_RED: 0.0
+#initial_GREEN: 0.1
+#initial_BLUE: 0.0
 
 #[neopixel hotend_rgb]
 #pin: EBBCan:PD3
@@ -349,6 +345,12 @@ sensor_mcu: EBBCan
 min_temp: 0
 max_temp: 100
 
+#[temperature_sensor chamber]
+#sensor_type: BME280
+#i2c_address: 118
+#i2c_mcu: pico
+#i2c_bus: i2c1d
+
 #####################################################################
 #      Other Sensors
 #####################################################################
@@ -360,210 +362,37 @@ spi_software_mosi_pin: EBBCan: PB11
 spi_software_miso_pin: EBBCan: PB2
 axes_map: x,y,z
 
-# sensor_type:MAX31865
-# sensor_pin: EBBCan: PA4
-# spi_bus: spi1
-# rtd_nominal_r: 100
-# rtd_reference_r: 430
-# rtd_num_of_wires: 2
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    50, 50, 20  # an example
 
-#[bltouch]
-#sensor_pin: ^EBBCan:PB8
-#control_pin: EBBCan:PB9
 
 #[filament_switch_sensor switch_sensor]
 #switch_pin: EBBCan:PB4
 
-#[filament_motion_sensor motion_sensor]
-#switch_pin: ^EBBCan:PB3
-
 #####################################################################
-# Macros
+#   Macros
 #####################################################################
 
-[gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customize for your slicer of choice
-gcode:
-    G28                            ; home all axes
-    G90                            ; absolute positioning    
-    G1 Z20 F3000                   ; move nozzle away from bed
-   
-[gcode_macro PRINT_END]
-#   Use PRINT_END for the slicer ending script - please customize for your slicer of choice
-gcode:
-    M400                           ; wait for buffer to clear
-    G92 E0                         ; zero the extruder
-    G1 E-4.0 F3600                 ; retract filament
-    G91                            ; relative positioning
+[include Macros/*.cfg]
 
-    #   Get Boundaries
-    {% set max_x = printer.configfile.config["stepper_x"]["position_max"]|float %}
-    {% set max_y = printer.configfile.config["stepper_y"]["position_max"]|float %}
-    {% set max_z = printer.configfile.config["stepper_z"]["position_max"]|float %}
-
-    #   Check end position to determine safe direction to move
-    {% if printer.toolhead.position.x < (max_x - 20) %}
-        {% set x_safe = 20.0 %}
-    {% else %}
-        {% set x_safe = -20.0 %}
-    {% endif %}
-
-    {% if printer.toolhead.position.y < (max_y - 20) %}
-        {% set y_safe = 20.0 %}
-    {% else %}
-        {% set y_safe = -20.0 %}
-    {% endif %}
-
-    {% if printer.toolhead.position.z < (max_z - 2) %}
-        {% set z_safe = 2.0 %}
-    {% else %}
-        {% set z_safe = max_z - printer.toolhead.position.z %}
-    {% endif %}
-
-    G0 Z{z_safe} F3600             ; move nozzle up
-    G0 X{x_safe} Y{y_safe} F20000  ; move nozzle to remove stringing
-    TURN_OFF_HEATERS
-    M107                           ; turn off fan
-    G90                            ; absolute positioning
-    G0 X60 Y{max_y-10} F3600          ; park nozzle at rear
-  
-[gcode_macro LOAD_FILAMENT]
-gcode:
-   M83                            ; set extruder to relative
-   G1 E30 F300                    ; load
-   G1 E15 F150                    ; prime nozzle with filament
-   M82                            ; set extruder to absolute
-    
-[gcode_macro UNLOAD_FILAMENT]
-gcode:
-   M83                            ; set extruder to relative
-   G1 E10 F300                    ; extrude a little to soften tip
-   G1 E-40 F1800                  ; retract some, but not too much or it will jam
-   M82                            ; set extruder to absolute
-
-[gcode_macro _HOME_X]
-gcode:
-    # Always use consistent run_current on A/B steppers during sensorless homing
-    {% set RUN_CURRENT_X = printer.configfile.settings['tmc2209 stepper_x'].run_current|float %}
-    {% set RUN_CURRENT_Y = printer.configfile.settings['tmc2209 stepper_y'].run_current|float %}
-    {% set HOME_CURRENT_RATIO = 0.7 %} # by default we are dropping the motor current during homing. you can adjust this value if you are having trouble with skipping while homing
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_X}
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_Y}
-
-    # Home
-    G28 X
-    # Move away
-    G91
-    G1 X-10 F1200
-    
-    # Wait just a second… (give StallGuard registers time to clear)
-    G4 P1000
-    G90
-    # Set current during print
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CURRENT_X}
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CURRENT_Y}
-
-[gcode_macro _HOME_Y]
-gcode:
-    # Set current for sensorless homing
-    {% set RUN_CURRENT_X = printer.configfile.settings['tmc2209 stepper_x'].run_current|float %}
-    {% set RUN_CURRENT_Y = printer.configfile.settings['tmc2209 stepper_y'].run_current|float %}
-    {% set HOME_CURRENT_RATIO = 0.7 %} # by default we are dropping the motor current during homing. you can adjust this value if you are having trouble with skipping while homing
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_X}
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_Y}
-
-    # Home
-    G28 Y
-    # Move away
-    G91
-    G1 Y-10 F1200
-
-    # Wait just a second… (give StallGuard registers time to clear)
-    G4 P1000
-    G90
-    # Set current during print
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CURRENT_X}
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CURRENT_Y}
-
-[gcode_macro _HOME_Z]
-gcode:
-    G90
-    G28 Z
-    G1 Z30
-
-
-[gcode_macro START_PRINT]
-gcode:
-    {% set BED_TEMP = printer.heater_bed.target %}
-    {% set EXTRUDER_TEMP = printer.extruder.target %}
-    M117 Start Print
-
-    M117 Waiting for temperature
-    # M117 Target { printer.extruder.temperature }/{ printer.extruder.target }
-    # Start bed heating and continue
-    M140 S{BED_TEMP}
-    {% if printer.heater_bed.temperature < BED_TEMP|float*0.85 %}
-        M190 S{BED_TEMP|float*0.85} # wait till 0.85 of bed temp is reached, then continue  
-    {% endif %}
-    
-    M140 S{BED_TEMP} 
-    M109 S{EXTRUDER_TEMP}
-    M190 S{BED_TEMP}
-
-    M117 Homing
-    # Use absolute coordinates
-    G90
-    # Home the printer
-    G28
-
-    # Move the nozzle near the bed
-    G1 X15 Y20 Z5 F6000
-    
-    # Prime line
-    PRIME_LINE
-    M117 Printing...
-
-[gcode_macro END_PRINT]
-gcode:
-    M117 Done printing :)
-    # move z up
-    G91
-    G1 E-3 Z+10 F3000
-    # absolute xy 
-    G90
-    G1 X{printer.toolhead.axis_maximum.x -5} Y{printer.toolhead.axis_maximum.y - 5} F2000
-    #disable hotend and heated bed
-    M104 S0
-    M140 S0
-    # disable steppers
-    M84
-
-# prime the nozzle 
-[gcode_macro PRIME_LINE]
-gcode: 
-    M117 Prime Line
-    G0 X0 Y120 F9000 ; Go to front
-    G0 Z0.05 ; Drop to bed
-    G92 E0 ; zero the extruded length
-    G1 E30 F200 ; Extrude 25mm of filament in a 4cm line
-    G92 E0 ; zero the extruded length
-    G1 E-1 F500 ; Retract a little
-    G1 X20 Y100 F4000 ; Quickly wipe away from the filament line
-    G1 Z2.0 ; Raise and begin printing.
-
-[include TEST_SPEED.cfg]
+#####################################################################
+#   SAVE_CONFIG
+#####################################################################
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 55.148
-#*# pid_ki = 2.256
-#*# pid_kd = 337.091
+#*# pid_kp = 58.430
+#*# pid_ki = 2.686
+#*# pid_kd = 317.715
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 25.175
-#*# pid_ki = 1.142
-#*# pid_kd = 138.779
+#*# pid_kp = 23.593
+#*# pid_ki = 1.077
+#*# pid_kd = 129.174
+
