--- a/moonraker.conf
+++ b/moonraker.conf
@@ -84,3 +84,21 @@ type: git_repo
 origin: https://github.com/Arksine/CanBoot.git
 path: ~/CanBoot
 is_system_service: False
+
+[update_manager mobileraker]
+type: git_repo
+path: /home/pi/mobileraker_companion
+origin: https://github.com/Clon1998/mobileraker_companion.git
+primary_branch:main
+managed_services: mobileraker
+env: /home/pi/mobileraker-env/bin/python
+requirements: scripts/mobileraker-requirements.txt
+install_script: scripts/install.sh
+
+[update_manager moonraker-telegram-bot]
+type: git_repo
+path: ~/moonraker-telegram-bot
+origin: https://github.com/nlef/moonraker-telegram-bot.git
+env: ~/moonraker-telegram-bot-env/bin/python
+requirements: scripts/requirements.txt
+install_script: scripts/install.sh
