--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,6 +1,7 @@
 [server]
 host: 0.0.0.0
 port: 7125
+klippy_uds_address: /home/pi/printer_data/comms/klippy.sock
 
 [file_manager]
 # cancel object preprocessing - set to True to enable; leave disabled when running on a low-powered device (e.g. Pi Zero)
