fix moonraker config

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -74,16 +74,16 @@ managed_services: klipper moonraker
 [update_manager KlipperScreen]
 type: git_repo
 path: ~/KlipperScreen
-origin: https://github.com/jordanruthe/KlipperScreen.git
-env: ~/.KlipperScreen-env/bin/python
+origin: https://github.com/KlipperScreen/KlipperScreen.git
+virtualenv: ~/.KlipperScreen-env
 requirements: scripts/KlipperScreen-requirements.txt
-install_script: scripts/KlipperScreen-install.sh
+system_dependencies: scripts/system-dependencies.json
 managed_services: KlipperScreen
 
-[update_manager canboot]
+[update_manager katapult]
 type: git_repo
-origin: https://github.com/Arksine/CanBoot.git
-path: ~/CanBoot
+origin: https://github.com/Arksine/katapult.git
+path: ~/katapult
 is_system_service: False
 
 [update_manager mobileraker]
