--- a/config/printer_VoronZero.cfg
+++ b/config/printer_VoronZero.cfg
@@ -1,26 +1,26 @@
+[include mainsail.cfg]
+[include UniversalMacros/*.cfg]
+[include PrinterOverrides/VoronZero/*.cfg]
+
+# This file contains common pin mappings for the BIGTREETECH SKR Pico V1.0
+# To use this config, the firmware should be compiled for the RP2040 with
+# USB communication.
+
 # The "make flash" command does not work on the SKR Pico V1.0. Instead,
 # after running "make", copy the generated "out/klipper.uf2" file
 # to the mass storage device in RP2040 boot mode
 
 ## Voron Design VORON 0.2 SKR Pico V1.0 config
 
-#####################################################################
-#     Printer Definition
-#####################################################################
-
-[printer]
-kinematics: corexy
-max_velocity: 600
-max_accel: 15000
-max_z_velocity: 15
-max_z_accel: 300
-square_corner_velocity: 6.0
-
-[include globals.cfg]
-
-#####################################################################
-#     MCUs
-#####################################################################
+## *** THINGS TO CHANGE/CHECK: ***
+## MCU path                                                                     [mcu] section
+## Z and Extruder motor currents                                                [tmc2209 stepper_*] sections. Uncomment the stepper motor you have
+## Full steps per rotation for Extruder                                         [extruder] section
+## Thermistor types                                                             [extruder] and [heater_bed] sections - See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types
+## Motor currents                                                               [extruder] [stepper] and [_HOME_X/Y] macro sections
+## PID tune                                                                     [extruder] and [heater_bed] sections
+## Fine tune E steps                                                            [extruder] section
+## For more info                                                                check https://docs.vorondesign.com/build/startup/#v0
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_rp2040_45503571288ABCA8-if00											# for UART connection
@@ -38,6 +38,28 @@ serial: /tmp/klipper_host_mcu
 #[mcu pico]
 #serial: /dev/serial/by-id/usb-Klipper_rp2040_E661410403587130-if00
 #restart_method: command
+
+[printer]
+kinematics: corexy
+max_velocity: 600
+max_accel: 15000
+max_z_velocity: 15
+max_z_accel: 300
+square_corner_velocity: 6.0
+
+#####################################################################
+#     Extra stuff
+#####################################################################
+
+#[temperature_sensor chamber]
+#sensor_type: BME280
+#i2c_address: 118
+#i2c_mcu: pico
+#i2c_bus: i2c1d
+
+[led chamber_led]
+white_pin: gpio20
+initial_WHITE: 1
 
 #####################################################################
 #      X/Y Stepper Settings
@@ -108,7 +130,7 @@ enable_pin: !gpio2
 rotation_distance: 8                                                # For T8x8 integrated lead screw
 microsteps: 32
 endstop_pin: ^gpio25
-position_endstop: 120
+#position_endstop: 120
 position_max: 120
 position_min: -1.5
 homing_speed: 20
@@ -162,9 +184,23 @@ max_extrude_cross_section: 100 #0.8
 pressure_advance: 0.041                                              # See tuning pressure advance doc
 pressure_advance_smooth_time: 0.040
 
+#sensor_type: MAX31865
+#sensor_pin: EBBCan: PA4
+#spi_bus: spi1
+#rtd_nominal_r: 100
+#rtd_reference_r: 430
+#rtd_num_of_wires: 2
+
 [tmc2209 extruder]
 uart_pin: EBBCan: PA15
 interpolate: False
+## For OMC (StepperOnline) 14HR07-1004VRN 1A 0.9°
+#run_current: 0.5 # for OMC 14HR07-1004VRN rated at 1A
+## For LDO LDO 36STH17-1004AHG 1A 1.8° 
+#run_current: 0.3 # for LDO 36STH17-1004AHG
+## For LDO LDO 36STH20-1004AHG 1A 1.8° 
+#run_current: 0.6 # for LDO 36STH20-1004AHG
+## For Moons CSE14RA1L410A-01
 run_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0                                            # Set to 0 for spreadcycle, avoid using stealthchop on extruder
@@ -261,14 +297,6 @@ screw3: 115,115
 screw3_name: back right
 
 #####################################################################
-#     LEDs
-#####################################################################
-
-[led chamber_led]
-white_pin: gpio20
-initial_WHITE: 1
-
-#####################################################################
 # Neopixel
 #####################################################################
 
@@ -345,12 +373,6 @@ sensor_mcu: EBBCan
 min_temp: 0
 max_temp: 100
 
-#[temperature_sensor chamber]
-#sensor_type: BME280
-#i2c_address: 118
-#i2c_mcu: pico
-#i2c_bus: i2c1d
-
 #####################################################################
 #      Other Sensors
 #####################################################################
@@ -367,19 +389,112 @@ accel_chip: adxl345
 probe_points:
     50, 50, 20  # an example
 
+# sensor_type:MAX31865
+# sensor_pin: EBBCan: PA4
+# spi_bus: spi1
+# rtd_nominal_r: 100
+# rtd_reference_r: 430
+# rtd_num_of_wires: 2
+
+#[bltouch]
+#sensor_pin: ^EBBCan:PB8
+#control_pin: EBBCan:PB9
 
 #[filament_switch_sensor switch_sensor]
 #switch_pin: EBBCan:PB4
 
-#####################################################################
-#   Macros
-#####################################################################
-
-[include Macros/*.cfg]
+#[filament_motion_sensor motion_sensor]
+#switch_pin: ^EBBCan:PB3
 
 #####################################################################
-#   SAVE_CONFIG
+# Slicer Settings
 #####################################################################
+
+# Enable object exclusion
+[exclude_object]
+
+# Enable arcs support
+[gcode_arcs]
+resolution: 0.1
+
+#####################################################################
+# Macros
+#####################################################################
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+   M83                            ; set extruder to relative
+   G1 E30 F300                    ; load
+   G1 E15 F150                    ; prime nozzle with filament
+   M82                            ; set extruder to absolute
+    
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+   M83                            ; set extruder to relative
+   G1 E10 F300                    ; extrude a little to soften tip
+   G1 E-40 F1800                  ; retract some, but not too much or it will jam
+   M82                            ; set extruder to absolute
+
+[gcode_macro _HOME_X]
+gcode:
+    # Always use consistent run_current on A/B steppers during sensorless homing
+    {% set RUN_CURRENT_X = printer.configfile.settings['tmc2209 stepper_x'].run_current|float %}
+    {% set RUN_CURRENT_Y = printer.configfile.settings['tmc2209 stepper_y'].run_current|float %}
+    {% set HOME_CURRENT_RATIO = 0.7 %} # by default we are dropping the motor current during homing. you can adjust this value if you are having trouble with skipping while homing
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_X}
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_Y}
+
+    # Home
+    G28 X
+    # Move away
+    G91
+    G1 X-10 F1200
+    
+    # Wait just a second… (give StallGuard registers time to clear)
+    G4 P1000
+    G90
+    # Set current during print
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CURRENT_X}
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CURRENT_Y}
+
+[gcode_macro _HOME_Y]
+gcode:
+    # Set current for sensorless homing
+    {% set RUN_CURRENT_X = printer.configfile.settings['tmc2209 stepper_x'].run_current|float %}
+    {% set RUN_CURRENT_Y = printer.configfile.settings['tmc2209 stepper_y'].run_current|float %}
+    {% set HOME_CURRENT_RATIO = 0.7 %} # by default we are dropping the motor current during homing. you can adjust this value if you are having trouble with skipping while homing
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_X}
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CURRENT_RATIO * RUN_CURRENT_Y}
+
+    # Home
+    G28 Y
+    # Move away
+    G91
+    G1 Y-10 F1200
+
+    # Wait just a second… (give StallGuard registers time to clear)
+    G4 P1000
+    G90
+    # Set current during print
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CURRENT_X}
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CURRENT_Y}
+
+[gcode_macro _HOME_Z]
+gcode:
+    G90
+    G28 Z
+    G1 Z30
+  
+#   G0 X55 Y0 F9000 ; Go to front
+#   G0 Z0.03 ; Drop to bed
+#   G92 E0 ; zero the extruded length
+#   G1 X65 E20 F300 ; Prime
+#   G92 E0 ; zero the extruded length
+#   G1 E-1 F500 ; Retract a little
+#   G1 Z1 X22 Y22 F4000 ; Quickly wipe away from the filament line
+#   G1 Z2.0 ; Raise and begin printing.
+
+
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -395,4 +510,6 @@ probe_points:
 #*# pid_kp = 23.593
 #*# pid_ki = 1.077
 #*# pid_kd = 129.174
-
+#*#
+#*# [stepper_z]
+#*# position_endstop = 119.400
