--- a/config/UniversalMacros/StartEnd.cfg
+++ b/config/UniversalMacros/StartEnd.cfg
@@ -1,41 +1,49 @@
 #####################################################################
-# Slicer Macros
+# Start / End Macros
 #####################################################################
+
+[gcode_macro PRINT_START_WIPE_NOZZLE]
+gcode: 
+  M117 WIPE_NOZZLE
+  M118 Wiping Nozzle
+
+
+[gcode_macro PRINT_START_HOME]
+gcode:
+    M117 Homing
+    M118 Homing
+    G90
+    G28
+
+[gcode_macro PRINT_START_HEATUP]
+gcode:
+    {% set bed_threshold =  0.80 %}
+    
+    M117 Heating
+    {% if printer.heater_bed.temperature < params.BED|float*bed_threshold %}
+        M118 Waiting for Bed temperature to reach {params.BED|float*bed_threshold}°C
+        M190 S{params.BED|float*bed_threshold}
+    {% endif %}
+
+    M118 Set Bed to {params.BED}°C and continue
+    M140 S{params.BED} 
+    M118 Waiting for Extruder temperature to reach {params.EXTRUDER}°C
+    
+    M109 S{params.EXTRUDER}
+    M190 S{params.BED}
 
 [gcode_macro PRINT_START]
 gcode:
-    {% set BED_TEMP = printer.heater_bed.target %}
-    {% set EXTRUDER_TEMP = printer.extruder.target %}
-    M117 Start Print
-
-    M117 Waiting for temperature
-    # M117 Target { printer.extruder.temperature }/{ printer.extruder.target }
-    # Start bed heating and continue
-    M140 S{BED_TEMP}
-    {% if printer.heater_bed.temperature < BED_TEMP|float*0.85 %}
-        M190 S{BED_TEMP|float*0.85} # wait till 0.85 of bed temp is reached, then continue  
-    {% endif %}
-    
-    M140 S{BED_TEMP} 
-    M109 S{EXTRUDER_TEMP}
-    M190 S{BED_TEMP}
-
-    M117 Homing
-    # Use absolute coordinates
-    G90
-    # Home the printer
-    G28
-
-    # Move the nozzle near the bed
-    G1 X15 Y20 Z5 F6000
-    
-    # Prime line
-    PRIME_LINE
+    M118 PRINT_START Macro
+    PRINT_START_HEATUP BED={params.BED} EXTRUDER={params.EXTRUDER}
+    PRINT_START_HOME
+    PRINT_START_WIPE_NOZZLE
     M117 Printing...
    
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customize for your slicer of choice
 gcode:
+    M117 PRINT_END
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
     G1 E-4.0 F3600                 ; retract filament
@@ -70,4 +78,4 @@ gcode:
     TURN_OFF_HEATERS
     M107                           ; turn off fan
     G90                            ; absolute positioning
-    G0 X60 Y{max_y-10} F3600          ; park nozzle at rear
+    G0 X{max_x-15} Z{max_z} Y{max_y-15} F3600          ; park nozzle at rear
