--- a/config/UniversalMacros/TEST_NOISE.cfg
+++ b/config/UniversalMacros/TEST_NOISE.cfg
@@ -1,3 +1,7 @@
+#####################################################################
+# Test Noise Macro
+#####################################################################
+
 [gcode_macro TEST_NOISE]
 gcode:
     # Speed
