--- a/config/UniversalMacros/Buttons.cfg
+++ b/config/UniversalMacros/Buttons.cfg
@@ -15,6 +15,7 @@ gcode:
       M118 Start Heating first
    {% else %}
       SAVE_GCODE_STATE NAME=load_state
+      M117 Waiting for Extruder Temp
       M118 Waiting for Extruder Temp
       M109 S{target_temp}
       M300 # beep
