--- a/config/PrinterOverrides/4MAX/macros.cfg
+++ b/config/PrinterOverrides/4MAX/macros.cfg
@@ -8,7 +8,7 @@ gcode:
     G4 P{P}
     SET_PIN PIN=BEEPER_pin VALUE=0
 
-[gcode_macro LOAD_FILAMENT]
+[gcode_macro LOAD_FILAMENT_LONG]
 gcode:
     {% set purge_speed = 100 %}
     {% set purge_length = 50 %}
@@ -43,7 +43,7 @@ gcode:
         RESTORE_GCODE_STATE NAME=load_state
     {% endif %}
 
-[gcode_macro UNLOAD_FILAMENT]
+[gcode_macro UNLOAD_FILAMENT_LONG]
 gcode:
     {% set purge_speed = 100 %}
     {% set purge_length = 10 %}
