--- a/config/UniversalMacros/menu.cfg
+++ b/config/UniversalMacros/menu.cfg
@@ -1,22 +1,28 @@
 
 [menu __main __filament __loadf]
-type: command
-name: Load Filament
-gcode:
-    SAVE_GCODE_STATE NAME=__filament__load
-    LOAD_FILAMENT
-    RESTORE_GCODE_STATE NAME=__filament__load
+type: disabled
 
 [menu __main __filament __unloadf]
-type: command
-name: Unload Filament
-gcode:
-    SAVE_GCODE_STATE NAME=__filament__load
-    UNLOAD_FILAMENT
-    RESTORE_GCODE_STATE NAME=__filament__load
+type: disabled
 
 [menu __main __filament __loads]
 type: disabled
 
 [menu __main __filament __unloads]
 type: disabled
+
+[menu __main __filament __loadsh]
+type: command
+name: Load Short
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    LOAD_FILAMENT
+    RESTORE_GCODE_STATE NAME=__filament__load
+
+[menu __main __filament __unloadsh]
+type: command
+name: Unload Short
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    UNLOAD_FILAMENT
+    RESTORE_GCODE_STATE NAME=__filament__load
