--- a/config/printer_VoronZero.cfg
+++ b/config/printer_VoronZero.cfg
@@ -1,4 +1,4 @@
-[include mainsail.cfg]
+[include fluidd.cfg]
 [include UniversalMacros/*.cfg]
 [include PrinterOverrides/VoronZero/*.cfg]
 
@@ -23,16 +23,19 @@
 ## For more info                                                                check https://docs.vorondesign.com/build/startup/#v0
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_rp2040_45503571288F6B98-if00											# for UART connection
+serial: /dev/ttyAMA0
 restart_method: command
 
-[mcu U2C]
-canbus_uuid: 326e494af6a4
+# [mcu U2C]
+# canbus_uuid: 326e494af6a4
 
 [mcu EBBCan]
 canbus_uuid: aca2a134879f
 
-[mcu bttpi]
+# [mcu bttpi]
+# serial: /tmp/klipper_host_mcu
+
+[mcu pizero]
 serial: /tmp/klipper_host_mcu
 
 #[mcu pico]
@@ -58,7 +61,7 @@ square_corner_velocity: 6.0
 #i2c_bus: i2c1d
 
 [led chamber_led]
-white_pin: gpio20
+white_pin: gpio17
 initial_WHITE: 1
 
 #####################################################################
@@ -66,6 +69,9 @@ initial_WHITE: 1
 #####################################################################
 
 [stepper_x]
+# step_pin: gpio14
+# dir_pin: !gpio13
+# enable_pin: !gpio15
 step_pin: gpio11
 ## Refer to https://docs.vorondesign.com/build/startup/#v0
 dir_pin: gpio10                                                     # Check motor direction in link above. If inverted, add a ! before gpio10
@@ -221,6 +227,37 @@ min_temp: 0
 max_temp: 120
 
 #####################################################################
+#      Temperature Sensors
+#####################################################################
+
+# # embedded temperature sensor
+# [temperature_sensor U2C]
+# sensor_type: temperature_mcu
+# sensor_mcu: U2C
+# min_temp: 0
+# max_temp: 100
+
+# [temperature_sensor btt_pico]
+# sensor_type: temperature_mcu
+# min_temp: 0
+# max_temp: 100
+
+# embedded temperature sensor
+[temperature_sensor EBBCan]
+sensor_type: temperature_mcu
+sensor_mcu: EBBCan
+min_temp: 0
+max_temp: 100
+
+[temperature_sensor chamber]
+sensor_type: BME280
+min_temp: 15
+max_temp: 70
+i2c_address: 118
+i2c_mcu: pizero
+i2c_bus: i2c.1
+
+#####################################################################
 # Fan Control
 #####################################################################
 
@@ -239,12 +276,13 @@ kick_start_time: 0.5                                                # Depending 
 off_below: 0.13
 cycle_time: 0.010
 
-[controller_fan MCU_fan]
-pin: gpio17
-max_power: 1.0
-kick_start_time: 0.5
-heater: extruder
-#fan_speed: 1.0 
+[temperature_fan Pi Zero]
+pin: gpio20
+sensor_type: temperature_host
+min_temp: 15
+max_temp: 90
+target_temp: 50.0
+control: watermark
 
 #####################################################################
 #   Filament Runout Sensor
@@ -314,64 +352,36 @@ screw3_name: back right
 #####################################################################
 #   V0 Display
 #####################################################################
-[mcu display]
-serial: /dev/serial/by-id/usb-Klipper_stm32f042x6_140024000543564E32313720-if00
-restart_method: command
+# [mcu display]
+# serial: /dev/serial/by-id/usb-Klipper_stm32f042x6_140024000543564E32313720-if00
+# restart_method: command
 
-[display]
-lcd_type: sh1106
-i2c_mcu: display
-i2c_bus: i2c1a
-# Set the direction of the encoder wheel
-#   Standard: Right (clockwise) scrolls down or increases values. Left (counter-clockwise scrolls up or decreases values.
-encoder_pins: ^display:PA3, ^display:PA4
-#   Reversed: Right (clockwise) scrolls up or decreases values. Left (counter-clockwise scrolls down or increases values.
-#encoder_pins: ^display:PA4, ^display:PA3
-click_pin: ^!display:PA1
-kill_pin: ^!display:PA5
-#x_offset: 2
-#   Use X offset to shift the display towards the right. Value can be 0 to 3
-#vcomh: 0
-#   Set the Vcomh value on SSD1306/SH1106 displays. This value is
-#   associated with a "smearing" effect on some OLED displays. The
-#   value may range from 0 to 63. Default is 0.
-#   Adjust this value if you get some vertical stripes on your display. (31 seems to be a good value)
+# [display]
+# lcd_type: sh1106
+# i2c_mcu: display
+# i2c_bus: i2c1a
+# # Set the direction of the encoder wheel
+# #   Standard: Right (clockwise) scrolls down or increases values. Left (counter-clockwise scrolls up or decreases values.
+# encoder_pins: ^display:PA3, ^display:PA4
+# #   Reversed: Right (clockwise) scrolls up or decreases values. Left (counter-clockwise scrolls down or increases values.
+# #encoder_pins: ^display:PA4, ^display:PA3
+# click_pin: ^!display:PA1
+# kill_pin: ^!display:PA5
+# #x_offset: 2
+# #   Use X offset to shift the display towards the right. Value can be 0 to 3
+# #vcomh: 0
+# #   Set the Vcomh value on SSD1306/SH1106 displays. This value is
+# #   associated with a "smearing" effect on some OLED displays. The
+# #   value may range from 0 to 63. Default is 0.
+# #   Adjust this value if you get some vertical stripes on your display. (31 seems to be a good value)
 
-[neopixel displayStatus]
-pin: display:PA0
-chain_count: 1
-color_order: GRB
-initial_RED: 0.2
-initial_GREEN: 0.05
-initial_BLUE: 0
-
-#####################################################################
-#      Temperature Sensors
-#####################################################################
-
-[temperature_sensor raspberry_pi]
-sensor_type: temperature_host
-min_temp: 10
-max_temp: 100
-
-# embedded temperature sensor
-[temperature_sensor U2C]
-sensor_type: temperature_mcu
-sensor_mcu: U2C
-min_temp: 0
-max_temp: 100
-
-[temperature_sensor btt_pico]
-sensor_type: temperature_mcu
-min_temp: 0
-max_temp: 100
-
-# embedded temperature sensor
-[temperature_sensor EBBCan]
-sensor_type: temperature_mcu
-sensor_mcu: EBBCan
-min_temp: 0
-max_temp: 100
+# [neopixel displayStatus]
+# pin: display:PA0
+# chain_count: 1
+# color_order: GRB
+# initial_RED: 0.2
+# initial_GREEN: 0.05
+# initial_BLUE: 0
 
 #####################################################################
 #      Other Sensors
@@ -405,6 +415,10 @@ probe_points:
 
 #[filament_motion_sensor motion_sensor]
 #switch_pin: ^EBBCan:PB3
+
+# [filament_switch_sensor switch_sensor]
+# switch_pin: EBBCan:PB8
+# QUERY_FILAMENT_SENSOR SENSOR=switch_sensor
 
 #####################################################################
 # Slicer Settings
